src/test/ui/issue-46023.mir.stderr
error[E0594]: cannot assign to immutable item `x`
  --> $DIR/issue-46023.rs:18:9
   |
LL |         x = 1;
   |         ^^^^^ cannot assign

error: aborting due to previous error

For more information about this error, try `rustc --explain E0594`.
